@@ -1,5 +1,10 @@
 2006-11-20  Dan Winship  <danw@novell.com>
 
+	* libsoup/soup-connection-ntlm.c (send_request): 
+	* libsoup/soup-session-sync.c (queue_message): 
+	* libsoup/soup-status.c (reason_phrases): Add some missing
+	"static"s. Patch from Matthias Clasen, #376387
+
 	* libsoup/soup-xmlrpc-response.c (soup_xmlrpc_value_get_type)
 	(soup_xmlrpc_value_get_string): <value>foo</value> should mean the
 	same thing as <value><string>foo</string></value>. Pointed out by
